     Rolsky)
   - Fix the script environment variables MYAPP_PORT and MYAPP_RELOAD RT#52604
   - Fix aliasing applications under non-root paths with mod_rewrite in
     some apache versions where %ENV{SCRIPT_NAME} is set to the real name of
     the script, by using $ENV{REDIRECT_URL} which contains the non-rewritten
     URI.

  New features:
   - The __MOP__ hash element is suppressed from being dumped fully
     (and instead stringified) when dumping the error screen to be
     less packed with information of no use.

  Documentation:
   - Fix Pod nits (RT#52370)

5.80015 2009-12-02 15:13:54
  Bug fixes:
   - Fix bug in Catalyst::Engine which would cause a request parsing to end
     prematurely in the hypothetical case where calling $engine->read returned
     the single character '0'.
   - Fix failing tests when combined with new HTTP::Request::AsCGI

  Documentation:
   - Improved documentation on read and read_chunk methods in Catalyst::Engine.
   - Fix reversal of SCRIPT_NAME and PATH_INFO in previously correct nginx
     FastCGI documentation introduced in _02.

5.80014_02 2009-12-01 00:55:23
  Bug fixes:
   - Fix reporting the wrong Content-Length if the response body is an
     upgraded string. Strings mean the same thing whether or not they are
     upgraded, may get upgraded even after they are encoded, and will
     produce the same output either way, but bytes::length returns too big
     values for upgraded strings containing characters >127
   - Fix t/live_fork.t with bleadperl (RT#52100)
   - Set $ENV{PATH_INFO} from $ENV{REQUEST_URI} combined with
     $ENV{SCRIPT_NAME} if possible. This is many web servers always fully
     decode PATH_INFO including URI reserved characters. This allows us to
     tell foo%2cbar from foo%252cbar, and fixes issues with %2F in paths
     being incorrectly decoded, resulting in too many path parts (rather
     than 1 path part containing a /, on some web servers (at least nginx).
     (RT#50082)