@@ -13,6 +13,7 @@
      some apache versions where %ENV{SCRIPT_NAME} is set to the real name of
      the script, by using $ENV{REDIRECT_URL} which contains the non-rewritten
      URI.
+   - Fix usage display when myapp_create.pl is run with no arguments. RT#52630
 
   New features:
    - The __MOP__ hash element is suppressed from being dumped fully
